Implemented to interact smart contract Counter

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@suid/icons-material": "^0.6.11",
+    "@suid/material": "^0.15.1",
+    "ethers": "^6.9.1",
     "solid-js": "^1.8.7"
   },
   "devDependencies": {
